--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
   <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body>
-<h1 class="text-3xl font-bold underline dark:bg-gray-900 dark:text-white transition">Hello Tailwind!</h1>
-<button class="text-blue-500 bg-blue-50 dark:text-red-50 dark:bg-red-900 transition" x-on:click="toggleDarkMode()">Switch to <span x-text="isDarkMode ? 'Light' : 'Dark'"></span></button>
+<body class="h-dvh bg-gradient-to-b from-gradient-light-start to-gradient-light-end dark:from-gradient-dark-start dark:to-gradient-dark-end transition">
+<button type="button" class="transition" x-on:click="toggleDarkMode()">
+  <img x-show="!isDarkMode" class="" src="./assets/images/icon-moon.svg" alt="moon icon for dark mode">
+  <img x-show="isDarkMode" class="" src="./assets/images/icon-sun.svg" alt="sun icon for light mode">
+  <span class="sr-only" x-text="isDarkMode ? 'Switch to Light' : 'Switch to Dark'"></span>
+</button>
+
+
 
   Extensions List
 
